switch to signals for most code and added cache, route fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-@if (isLoading && !waitingForRouter) {
+@if (!hideSpinner()) {
   <div class="Loading-wrapper">
-    <app-spinner [class.pause-animation]="errored"></app-spinner>
-    <span class="message">{{ loadingMessage }}</span>
+    <app-spinner [class.pause-animation]="!!currentSpreadsheet.error()"></app-spinner>
+    <span
+      class="message">{{ loadingMessage }} {{ foundCachedSheet() }} {{ databasesLoaded() }} {{ resolvedOrUnnecessary() }}</span>
   </div>
-} @if (!isLoading && !waitingForRouter) {
+} @else {
   <app-header></app-header>
   <main class="main-wrapper">
     <router-outlet></router-outlet>
