--- a/src/app/spreadsheet-changer/index/index.component.html
+++ b/src/app/spreadsheet-changer/index/index.component.html
@@ -21,7 +21,7 @@
 <div class="view-content">
   @if (loadedSpreadsheet$) {
 
-    @if ((isLoading$ |async)) {
+    @if ((loadedSpreadsheet$.isLoading()) || !loadedSpreadsheet$.status()) {
 
       @if (hasRequested) {
         <div>
@@ -30,10 +30,9 @@
         </div>
       }
 
-    }
-    @if (!error) {
+    } @else if (loadedSpreadsheet$.hasValue()) {
 
-      @if ((loadedSpreadsheet$ | async); as loadedSpreadsheet) {
+      @if ((loadedSpreadsheet$.value()); as loadedSpreadsheet) {
 
         @if (loadedSpreadsheet) {
 
