--- a/src/app/valuable/components/index/index.component.html
+++ b/src/app/valuable/components/index/index.component.html
@@ -3,11 +3,11 @@
   <app-grid-controller/>
 </div>
 <aside class="view-sidebar">
-  @if (worksheets) {
+  @if (worksheets()) {
     <ul class="sub-navi">
 
-      @for (worksheet of worksheets; track worksheet) {
-        <app-sub-navi-item [link]="['/'+spreadsheetId, 'valuables', worksheet.title | slugify]"
+      @for (worksheet of worksheets(); track worksheet) {
+        <app-sub-navi-item [link]="['/'+spreadsheetId(), 'valuables', worksheet.title | slugify]"
 
                            [text]="worksheet.title"
                            [meta]="''+worksheet.data?.length">
