--- a/src/app/breedable/components/ball/ball.component.html
+++ b/src/app/breedable/components/ball/ball.component.html
@@ -1,8 +1,8 @@
 @if (gridAppearance$ | async; as gridAppearance) {
 
-  @if (worksheet) {
+  @if (worksheet()) {
     <app-grid [appearance]="gridAppearance">
-      @for (entry of worksheet.data; track trackBy($index, entry)) {
+      @for (entry of worksheet()?.data; track entry) {
         <app-grid-item [pokemon]="entry | castBreedable"/>
       }
     </app-grid>
