remember filter in living dexes

--- a/src/app/living-dexes/living-dexes.component.html
+++ b/src/app/living-dexes/living-dexes.component.html
@@ -4,22 +4,22 @@
 </div>
 <aside class="view-sidebar">
   <ul class="sub-navi">
-    <app-sub-navi-item link="../home" text="Home">
+    <app-sub-navi-item link="../home" text="Home" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
-    <app-sub-navi-item link="../sv" text="Scarlet/Violet">
+    <app-sub-navi-item link="../sv" text="Scarlet/Violet" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
-    <app-sub-navi-item link="../la" text="Legends Arceus">
+    <app-sub-navi-item link="../la" text="Legends Arceus" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
-    <app-sub-navi-item link="../bdsp" text="Brilliant Diamond/Shining Pearl">
+    <app-sub-navi-item link="../bdsp" text="Brilliant Diamond/Shining Pearl" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
-    <app-sub-navi-item link="../swsh" text="Sword/Shield">
+    <app-sub-navi-item link="../swsh" text="Sword/Shield" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
-    <app-sub-navi-item link="../usum" text="Ultra Sun/Ultra Moon">
+    <app-sub-navi-item link="../usum" text="Ultra Sun/Ultra Moon" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
   </ul>
