--- a/src/app/living-dexes/living-dexes.component.html
+++ b/src/app/living-dexes/living-dexes.component.html
@@ -7,6 +7,9 @@
     <app-sub-navi-item link="../home" text="Home" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
+    <app-sub-navi-item link="../lza" text="Legends Z-A" queryParamsHandling="merge">
+      <app-item category="ball" slug="poke"></app-item>
+    </app-sub-navi-item>
     <app-sub-navi-item link="../sv" text="Scarlet/Violet" queryParamsHandling="merge">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
